# othello-server

./: .gitignore  LICENSE  Procfile  README.md  deploy_timestamp.txt  manage.py  package-lock.json  package.json  requirements.txt
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  context_processors.py  local.py  production.py
docs/: ARCHITECTURE.md
game/: admin.py  consumers.py  forms.py  matching_consumer.py  models.py  redis_singleton.py  routing.py  sitemaps.py  tests.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_rename_is_verified_customuser__is_verified.py  0003_rename__is_verified_customuser__is_otp_verified.py  0004_remove_customuser__is_otp_verified_and_more.py  0005_alter_customuser_display_name.py  0006_alter_customuser_managers.py  0007_remove_customuser_subscription_expiry_and_more.py
game/static/game/: ai.js  ai.min.js  build-sw.mjs  confetti.browser.min.js  critical.js  evaluate.js  login.css  online.js  online.min.js  othello_wasm.js  othello_wasm.wasm  payment_cancel.css  payment_success.css  script.js  script.min.js  signup.css  strategy.css  style.css  style.min.css  sw-src.js  sw.js  worker.js  worker.min.js
game/static/game/images/favicon/: manifest.json
game/templates/game/: index.html  manifest.json  offline.html  payment_cancel.html  payment_success.html  premium_intent.html  signup.html  strategy-reversi-othello.html
game/templates/registration/: login.html
game/wasm/: CMakeLists.txt  evaluate_board.cpp
locale/en/LC_MESSAGES/: django.mo  django.po
